--- a/PopCinema/action.html
+++ b/PopCinema/action.html
@@ -188,26 +188,26 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src="/popcine tulisan png.png" alt="">
+            <img src="popcine tulisan png.png" alt="">
         </div>
-        <a href="/home.html">Home</a>
-        <a href="/orders.html">Orders</a>
+        <a href="home.html">Home</a>
+        <a href="orders.html">Orders</a>
         
         <div class="dropdown">
             <button class="dropbtn">Genre</button>
             <div class="dropdown-content">
-                <a href="/action.html">Action</a>
-                <a href="/comedi.html">Comedy</a>
-                <a href="/horror.html">Horror</a>
-                <a href="/romance.html">Romance</a>
-                <a href="/anime.html">Anime</a>
+                <a href="action.html">Action</a>
+                <a href="comedi.html">Comedy</a>
+                <a href="horror.html">Horror</a>
+                <a href="romance.html">Romance</a>
+                <a href="anime.html">Anime</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Profile</button>
             <div class="dropdown-content">
-                <a href="/login.html">Login</a>
-                <a href="/register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </div>
         </div>
     
@@ -225,12 +225,12 @@
 
 <div class="movie-container">
     <div class="movie">
-        <button><a href="/TR - BioskopAud/hitmen.html"><img src="https://i.pinimg.com/736x/05/d2/f2/05d2f2f2b98018a235246621a8913d48.jpg" alt="Movie Poster"></a></button>
-        <h3><a href="/TR - BioskopAud/hitmen.html">HITMEN</a></h3>
+        <button><a href="hitmen.html"><img src="https://i.pinimg.com/736x/05/d2/f2/05d2f2f2b98018a235246621a8913d48.jpg" alt="Movie Poster"></a></button>
+        <h3><a href="hitmen.html">HITMEN</a></h3>
     </div>
 
     <div class="movie">
-        <button><a href="/TR - BioskopAud/masuk.html"><img src="https://m.media-amazon.com/images/M/MV5BN2U4OTdmM2QtZTkxYy00ZmQyLTg2N2UtMDdmMGJmNDhlZDU1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Movie Poster"></a></button>
+        <button><a href="masuk.html"><img src="https://m.media-amazon.com/images/M/MV5BN2U4OTdmM2QtZTkxYy00ZmQyLTg2N2UtMDdmMGJmNDhlZDU1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Movie Poster"></a></button>
         <h3><a href="">MISSION IMPOSSIBLE</a></h3>
     </div>
 
@@ -246,9 +246,9 @@
 </div>
 
 <div class="footer">
-    <a href="/about us.html">About Us</a>
-    <a href="/contact.html">Contact Us</a>
-    <a href="/termsofuse.html">Terms of Use</a>
+    <a href="about us.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="termsofuse.html">Terms of Use</a>
 </div>
 
 </body>
