--- a/PopCinema/anime.html
+++ b/PopCinema/anime.html
@@ -188,26 +188,26 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src="/popcine tulisan png.png" alt="">
+            <img src="popcine tulisan png.png" alt="">
         </div>
-        <a href="/home.html">Home</a>
-        <a href="/orders.html">Orders</a>
+        <a href="home.html">Home</a>
+        <a href="orders.html">Orders</a>
         
         <div class="dropdown">
             <button class="dropbtn">Genre</button>
             <div class="dropdown-content">
-                <a href="/action.html">Action</a>
-                <a href="/comedi.html">Comedy</a>
-                <a href="/horror.html">Horror</a>
-                <a href="/romance.html">Romance</a>
-                <a href="/anime.html">Anime</a>
+                <a href="action.html">Action</a>
+                <a href="comedi.html">Comedy</a>
+                <a href="horror.html">Horror</a>
+                <a href="romance.html">Romance</a>
+                <a href="anime.html">Anime</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Profile</button>
             <div class="dropdown-content">
-                <a href="/login.html">Login</a>
-                <a href="/register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </div>
         </div>
     
@@ -225,8 +225,8 @@
 
 <div class="movie-container">
     <div class="movie">
-        <button><a href="/TR - BioskopAud/anime.html"><img src="https://upload.wikimedia.org/wikipedia/id/4/44/One_Piece_Film_Red_Visual_Poster.jpg" alt="Movie Poster"></a></button>
-        <h3><a href="/TR - BioskopAud/one piece red.html">ONE PIECE FILM: RED</a></h3>
+        <button><a href="anime.html"><img src="https://upload.wikimedia.org/wikipedia/id/4/44/One_Piece_Film_Red_Visual_Poster.jpg" alt="Movie Poster"></a></button>
+        <h3><a href="one piece red.html">ONE PIECE FILM: RED</a></h3>
     </div>
 
     <div class="movie">
@@ -246,9 +246,9 @@
 </div>
 
 <div class="footer">
-    <a href="/about us.html">About Us</a>
-    <a href="/contact.html">Contact Us</a>
-    <a href="/termsofuse.html">Terms of Use</a>
+    <a href="about us.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="termsofuse.html">Terms of Use</a>
 </div>
 
 </body>
