--- a/PopCinema/daftra.html
+++ b/PopCinema/daftra.html
@@ -108,7 +108,7 @@
 </head>
 <body>
     <div>
-        <form action="/masuk.html">
+        <form action="masuk.html">
             <h1>REGIST</h1>
             <h3>Silahkan Isikan form pendaftaran</h3>
             <div class="field">
@@ -134,7 +134,7 @@
             </div>
             <button>Daftar</button>
             <br>
-            <p>Sudah punya akun? <a href="/masuk.html">Login</a></p>
+            <p>Sudah punya akun? <a href="masuk.html">Login</a></p>
         </form>
     </div>
 </body>
