--- a/PopCinema/kuasa gelap.html
+++ b/PopCinema/kuasa gelap.html
@@ -253,26 +253,26 @@
     <div>
         <div class="navbar">
             <div class="logo">
-                <img src="/popcine tulisan png.png" alt="">
+                <img src="popcine tulisan png.png" alt="">
             </div>
-            <a href="/home.html">Home</a>
-            <a href="/orders.html">Orders</a>
+            <a href="home.html">Home</a>
+            <a href="orders.html">Orders</a>
             
             <div class="dropdown">
                 <button class="dropbtn">Genre</button>
                 <div class="dropdown-content">
-                    <a href="/action.html">Action</a>
-                    <a href="/comedi.html">Comedy</a>
-                    <a href="/horror.html">Horror</a>
-                    <a href="/romance.html">Romance</a>
-                    <a href="/anime.html">Anime</a>
+                    <a href="action.html">Action</a>
+                    <a href="comedi.html">Comedy</a>
+                    <a href="horror.html">Horror</a>
+                    <a href="romance.html">Romance</a>
+                    <a href="anime.html">Anime</a>
                 </div>
             </div>
             <div class="dropdown">
                 <button class="dropbtn">Profile</button>
                 <div class="dropdown-content">
-                    <a href="/login.html">Login</a>
-                    <a href="/register.html">Register</a>
+                    <a href="login.html">Login</a>
+                    <a href="register.html">Register</a>
                 </div>
             </div>
         
@@ -318,7 +318,7 @@
                     <button><a href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUp0uNWy-wjQ62z9L0d6gIKjx_zTvvoLiK9A&s" alt=""><h2>BANGKU KOSONG</h2></a></button>
                 </div>
                 <div class="movie">
-                    <button><a href="/hitmen.html"><img src="https://i.pinimg.com/736x/05/d2/f2/05d2f2f2b98018a235246621a8913d48.jpg" alt=""><h2>HITMEN</h2></a></button>
+                    <button><a href="hitmen.html"><img src="https://i.pinimg.com/736x/05/d2/f2/05d2f2f2b98018a235246621a8913d48.jpg" alt=""><h2>HITMEN</h2></a></button>
                 </div>
                 <div class="movie">
                     <button><a href=""><img src="https://m.media-amazon.com/images/M/MV5BN2U4OTdmM2QtZTkxYy00ZmQyLTg2N2UtMDdmMGJmNDhlZDU1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""><h2>MISSION IMPOSIBBLE</h2></a></button>
@@ -330,14 +330,14 @@
                     <button><a href=""><img src="https://m.media-amazon.com/images/M/MV5BZWFiNmRkY2MtN2ViZC00MzhhLWI0YWYtNzVlZWFmZDI3ZjE3XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""><h2>HAIKYU!! THE DUMPSTER BATTLE</h2></a></button>
                 </div>
                 <div class="movie">
-                    <button><a href="/one piece red.html"><img src="https://upload.wikimedia.org/wikipedia/id/4/44/One_Piece_Film_Red_Visual_Poster.jpg" alt=""><h2>ONE PIECE FILM: RED</h2></a></button>
+                    <button><a href="one piece red.html"><img src="https://upload.wikimedia.org/wikipedia/id/4/44/One_Piece_Film_Red_Visual_Poster.jpg" alt=""><h2>ONE PIECE FILM: RED</h2></a></button>
                 </div>
             </div>
         </div>
         <div class="footer">
-            <a href="/about us.html">About Us</a>
-            <a href="/contact.html">Contact Us</a>
-            <a href="/termsofuse.html">Terms of Use</a>
+            <a href="about us.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="termsofuse.html">Terms of Use</a>
         </div>
     </div>
 </body>
