--- a/PopCinema/login.html
+++ b/PopCinema/login.html
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="/popcine tulisan png.png" alt="">
+        <img src="popcine tulisan png.png" alt="">
     </div>
     <div class="wrapper">
             <h1>Login</h1>
@@ -124,7 +124,7 @@
             <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
-                <p>Don't have an account?<a href="/register.html">Register</a></p>
+                <p>Don't have an account?<a href="register.html">Register</a></p>
             </div>
         </form>
     </div>
