--- a/PopCinema/register.html
+++ b/PopCinema/register.html
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="/popcine tulisan png.png" alt="">
+        <img src="popcine tulisan png.png" alt="">
     </div>
     <div class="wrapper">
             <h1>Register</h1>
@@ -130,7 +130,7 @@
             <button type="submit" class="btn">Register</button>
 
             <div class="register-link">
-                <p>Have an account?<a href="/login.html">Login</a></p>
+                <p>Have an account?<a href="login.html">Login</a></p>
             </div>
         </form>
     </div>
