--- a/PopCinema/about us.html
+++ b/PopCinema/about us.html
@@ -163,26 +163,26 @@ body {
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="/popcine tulisan png.png" alt="">
+            <img src="popcine tulisan png.png" alt="">
         </div>
-        <a href="/home.html">Home</a>
-        <a href="/orders.html">Orders</a>
+        <a href="home.html">Home</a>
+        <a href="orders.html">Orders</a>
         
         <div class="dropdown">
             <button class="dropbtn">Genre</button>
             <div class="dropdown-content">
-                <a href="/action.html">Action</a>
-                <a href="/comedi.html">Comedy</a>
-                <a href="/horror.html">Horror</a>
-                <a href="/romance.html">Romance</a>
-                <a href="/anime.html">Anime</a>
+                <a href="action.html">Action</a>
+                <a href="comedi.html">Comedy</a>
+                <a href="horror.html">Horror</a>
+                <a href="romance.html">Romance</a>
+                <a href="anime.html">Anime</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Profile</button>
             <div class="dropdown-content">
-                <a href="/login.html">Login</a>
-                <a href="/register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </div>
         </div>
     
@@ -194,7 +194,7 @@ body {
         </div>
     </div>    
     <div class="profile">
-        <img src="/popcine tulisan png.png" alt="">
+        <img src="popcine tulisan png.png" alt="">
         <h3>Ayo kenal PopCine lebih  dalam lagi!</h3><br>
         <p>PopCine adalah kepanjangan dari "Popcorn Cinema", yang dimana "Popcorn" identik dengan cemilan yang dijual di bioskop, dan "Cinema" merupakan Bahasa Inggris dari bioskop.
             <br><br>PopCine sendiri merupakan website untuk membeli tiket bioskop secara online.
@@ -206,9 +206,9 @@ body {
             <h3>Selamat menggunakan PopCine, semoga website ini membantu!</h3>
     </div>
     <div class="footer">
-        <a href="/about us.html">About Us</a>
-        <a href="/contact.html">Contact Us</a>
-        <a href="/termsofuse.html">Terms of Use</a>
+        <a href="about us.html">About Us</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="termsofuse.html">Terms of Use</a>
     </div>
 
 </body>
