--- a/PopCinema/hitmen.html
+++ b/PopCinema/hitmen.html
@@ -253,26 +253,26 @@
     <div>
         <div class="navbar">
         <div class="logo">
-            <img src="/popcine tulisan png.png" alt="">
+            <img src="popcine tulisan png.png" alt="">
         </div>
-        <a href="/home.html">Home</a>
-        <a href="/orders.html">Orders</a>
+        <a href="home.html">Home</a>
+        <a href="orders.html">Orders</a>
         
         <div class="dropdown">
             <button class="dropbtn">Genre</button>
             <div class="dropdown-content">
-                <a href="/action.html">Action</a>
-                <a href="/comedi.html">Comedy</a>
-                <a href="/horror.html">Horror</a>
-                <a href="/romance.html">Romance</a>
-                <a href="/anime.html">Anime</a>
+                <a href="action.html">Action</a>
+                <a href="comedi.html">Comedy</a>
+                <a href="horror.html">Horror</a>
+                <a href="romance.html">Romance</a>
+                <a href="anime.html">Anime</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Profile</button>
             <div class="dropdown-content">
-                <a href="/login.html">Login</a>
-                <a href="/register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </div>
         </div>
         
@@ -329,14 +329,14 @@
                     <button><a href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUp0uNWy-wjQ62z9L0d6gIKjx_zTvvoLiK9A&s" alt=""><h2>BANGKU KOSONG</h2></a></button>
                 </div>
                 <div class="movie">
-                    <button><a href="/milly & mamet.html"><img src="https://cdn-brilio-net.akamaized.net/news/2018/11/15/155033/948475-1000xauto-film-milly-.jpg" alt=""><h2>MILLY & MAMET</h2></a></button>
+                    <button><a href="milly & mamet.html"><img src="https://cdn-brilio-net.akamaized.net/news/2018/11/15/155033/948475-1000xauto-film-milly-.jpg" alt=""><h2>MILLY & MAMET</h2></a></button>
                 </div>
             </div>
         </div>
         <div class="footer">
-            <a href="/about us.html">About Us</a>
-            <a href="/contact.html">Contact Us</a>
-            <a href="/termsofuse.html">Terms of Use</a>
+            <a href="about us.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="termsofuse.html">Terms of Use</a>
         </div>
     </div>
 </body>
