--- a/PopCinema/horor.html
+++ b/PopCinema/horor.html
@@ -188,26 +188,26 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src="/popcine tulisan png.png" alt="">
+            <img src="popcine tulisan png.png" alt="">
         </div>
-        <a href="/home.html">Home</a>
-        <a href="/orders.html">Orders</a>
+        <a href="home.html">Home</a>
+        <a href="orders.html">Orders</a>
         
         <div class="dropdown">
             <button class="dropbtn">Genre</button>
             <div class="dropdown-content">
-                <a href="/action.html">Action</a>
-                <a href="/comedi.html">Comedy</a>
-                <a href="/horror.html">Horror</a>
-                <a href="/romance.html">Romance</a>
-                <a href="/anime.html">Anime</a>
+                <a href="action.html">Action</a>
+                <a href="comedi.html">Comedy</a>
+                <a href="horror.html">Horror</a>
+                <a href="romance.html">Romance</a>
+                <a href="anime.html">Anime</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Profile</button>
             <div class="dropdown-content">
-                <a href="/login.html">Login</a>
-                <a href="/register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </div>
         </div>
     
@@ -225,12 +225,12 @@
 
 <div class="movie-container">
     <div class="movie">
-        <button><a href="/TR - BioskopAud/kuasa gelap.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYf-POjXzvet7kJ5jS5vY_AOotUpRawUzr3w&s" alt="Movie Poster"></a></button>
-        <h3><a href="/TR - BioskopAud/kuasa gelap.html">KUASA GELAP</a></h3>
+        <button><a href="kuasa gelap.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYf-POjXzvet7kJ5jS5vY_AOotUpRawUzr3w&s" alt="Movie Poster"></a></button>
+        <h3><a href="kuasa gelap.html">KUASA GELAP</a></h3>
     </div>
 
     <div class="movie">
-        <button><a href="/TR - BioskopAud/masuk.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpvSOW0kRr8MytTjU4bmaWLpCxNfLmyU3aCg&s" alt="Movie Poster"></a></button>
+        <button><a href="masuk.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpvSOW0kRr8MytTjU4bmaWLpCxNfLmyU3aCg&s" alt="Movie Poster"></a></button>
         <h3><a href="">SUMALA</a></h3>
     </div>
 
@@ -246,9 +246,9 @@
 </div>
 
 <div class="footer">
-    <a href="/about us.html">About Us</a>
-    <a href="/contact.html">Contact Us</a>
-    <a href="/termsofuse.html">Terms of Use</a>
+    <a href="about us.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="termsofuse.html">Terms of Use</a>
 </div>
 
 </body>
