--- a/PopCinema/one pice red.html
+++ b/PopCinema/one pice red.html
@@ -252,26 +252,26 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="/popcine tulisan png.png" alt="">
+            <img src="popcine tulisan png.png" alt="">
         </div>
-        <a href="/home.html">Home</a>
-        <a href="/orders.html">Orders</a>
+        <a href="home.html">Home</a>
+        <a href="orders.html">Orders</a>
         
         <div class="dropdown">
             <button class="dropbtn">Genre</button>
             <div class="dropdown-content">
-                <a href="/action.html">Action</a>
-                <a href="/comedi.html">Comedy</a>
-                <a href="/horror.html">Horror</a>
-                <a href="/romance.html">Romance</a>
-                <a href="/anime.html">Anime</a>
+                <a href="action.html">Action</a>
+                <a href="comedi.html">Comedy</a>
+                <a href="horror.html">Horror</a>
+                <a href="romance.html">Romance</a>
+                <a href="anime.html">Anime</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Profile</button>
             <div class="dropdown-content">
-                <a href="/login.html">Login</a>
-                <a href="/register.html">Register</a>
+                <a href="login.html">Login</a>
+                <a href="register.html">Register</a>
             </div>
         </div>
     
@@ -333,9 +333,9 @@
             </div>
         </div>
         <div class="footer">
-            <a href="/about us.html">About Us</a>
-            <a href="/contact.html">Contact Us</a>
-            <a href="/termsofuse.html">Terms of Use</a>
+            <a href="about us.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="termsofuse.html">Terms of Use</a>
         </div>
     </div>
 </body>
